# spblas-reference

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt.backup  LICENSE  README.md
.github/: ci.yml  pull_request_template.md
.github/workflows/: ci.yml
amd_spblas/: CMakeLists.txt  csr_add.hip.cpp  filter.hip.cpp
arm_eg/: armpl_spmv_eg.cpp
cusparse_examples/: CMakeLists.txt  simple_spgemm.cpp  simple_spgemm_two.cpp  simple_spmv.cpp
cuspblas/: CMakeLists.txt  csr_add.cu  filter.cu
device_examples/: CMakeLists.txt  allocator.hpp  simple_add.cpp  simple_conv.cpp  simple_filter.cpp  simple_op.cpp  simple_sddmm.cpp  simple_spgemm.cpp  simple_spgemm_4args.cpp  simple_spgemm_object.cpp  simple_spgemm_symbolic_numeric.cpp  simple_spgemm_two.cpp  simple_spmv.cpp  simple_trsv.cpp
examples/: CMakeLists.txt  matrix_opt_example.cpp  simple_spgemm.cpp  simple_spgemm_two.cpp  simple_spmm.cpp  simple_spmv.cpp  simple_sptrsv.cpp  spgemm.cpp  spmm_csc.cpp  spmm_csr.cpp  spmv.hpp  sptrsv_csr.cpp  test.cpp
examples/MATLAB_MEX/: build_mex_APIs.m  simple_spgemm_mex.cpp  simple_spmm_mex.cpp  simple_spmm_mex.m  simple_spmv_mex.cpp  simple_spmv_mex.m  simple_sptrsv_mex.cpp  testSparseBLASMexAPIs.m
examples/armpl/: CMakeLists.txt  armpl_example.cpp
examples/cusparse/: CMakeLists.txt  cusparse_simple_spmm.cpp  cusparse_simple_spmv.cpp  util.hpp
examples/device/: CMakeLists.txt  device_spmv.cpp  simple_spgemm_reuse.cpp  simple_spmv.cpp  spmm_benchmark.cpp
examples/mkl/: CMakeLists.txt  mkl_test.cpp
examples/rocsparse/: CMakeLists.txt  rocsparse_simple_spmv.cpp  util.hpp
examples/rocsparse_examples/: CMakeLists.txt  hello_world.cpp
examples/sycl_reference/: CMakeLists.txt  sycl_spmm.cpp
include/: CMakeLists.txt  matrices.hpp
include/amd_spblas/: csr_add.hpp  filter.hpp
include/cuspblas/: csr_add.hpp  filter.hpp
include/spblas/: allocator.hpp  array.hpp  concepts.hpp  spblas.hpp
include/spblas/algorithms/: add.hpp  add_impl.hpp  algorithms.hpp  conjugated.hpp  conjugated_impl.hpp  multiply.hpp  multiply_impl.hpp  scale.hpp  scale_impl.hpp  scaled.hpp  scaled_impl.hpp  transpose.hpp  transpose_impl.hpp  transposed.hpp  triangular_solve.hpp  triangular_solve_impl.hpp
include/spblas/algorithms/detail/: sparse_dot_product.hpp
include/spblas/algorithms/detail/spgemm/: spgemm.hpp  spgemm_gustavsons.hpp  spgemm_innerproduct.hpp  spgemm_outerproduct.hpp
include/spblas/algorithms/nvidia/: multiply_impl.hpp  scale_impl.hpp  scaled_impl.hpp
include/spblas/backend/: algorithms.hpp  backend.hpp  concepts.hpp  cpos.hpp  csr_builder.hpp  generate.hpp  hash_accumulator.hpp  log.hpp  spa_accumulator.hpp  view_customizations.hpp
include/spblas/backend/sycl/: multiply_impl.hpp  spmm_impl.hpp
include/spblas/detail/: bind_info.hpp  concepts.hpp  detail.hpp  index.hpp  log.hpp  mdspan.hpp  operation_info_t.hpp  ranges.hpp  tag_invoke.hpp  triangular_types.hpp  tuple_concept.hpp  type_traits.hpp  types.hpp  view_inspectors.hpp
include/spblas/views/: bsr_view.hpp  collection.hpp  conjugated_view.hpp  conjugated_view_impl.hpp  csc_view.hpp  csr_view.hpp  inspectors.hpp  matrix_opt.hpp  matrix_opt_impl.hpp  matrix_view.hpp  matrix_views.hpp  matrx_opt_impl.hpp  scaled_view.hpp  scaled_view_impl.hpp  view_base.hpp  views.hpp
miniapps/: CMakeLists.txt
miniapps/CMake/: blaspp.cmake  lapackpp.cmake  miniappsConfig.cmake.in  miniappsConfigVersion.cmake.in  rl_build_options.cmake  rl_config.cmake  rl_version.cmake
miniapps/include/: CMakeLists.txt  bicgstab.hh  cg.hh  cqrrpt.hh  krylov.hh  matrix_utils.hh  miniapps.hh  rl_config.hh.in  util.hh
miniapps/test/: CMakeLists.txt
miniapps/test/randnla/: CMakeLists.txt  test_cqrrpt.cc
miniapps/test/solvers/: CMakeLists.txt  test_bicgstab.cpp  test_cg.cpp
notes/: matrices.hpp  matrix_data_structure_notes.hpp  spgemm.cpp  spmv.hpp
scripts/: plot_results.py  spmm_experiments_mkl.out  spmm_experiments_sycl.out
test/gtest/: CMakeLists.txt  add_test.cpp  conjugate_test.cpp  matrix_view_test.cpp  mdspan_overlays.cpp  memory.hpp  spgemm_csr_csc.cpp  spgemm_test.cpp  spmm_test.cpp  spmv_test.cpp  tag_test.cpp  transpose_test.cpp  triangular_solve_test.cpp  util.hpp
test/gtest/device/: spgemm_reuse_test.cpp  spgemm_test.cpp  spmv_test.cpp  triangular_solve_test.cpp
test/gtest/device/rocsparse/: spgemm_4args_test.cpp
test/gtest/onemkl/: device_vector.hpp
test/gtest/rocsparse/: spgemm_4args_test.cpp  spgemm_test.cpp  spmv_test.cpp
