function(add_example example_name)
  add_executable(${example_name} ${example_name}.cpp)
  target_link_libraries(${example_name} spblas fmt)
endfunction()

if (NOT SPBLAS_GPU_BACKEND)
  add_example(simple_spmv)
  add_example(simple_spmm)
  add_example(simple_spgemm)
  add_example(simple_sptrsv)
  add_example(matrix_opt_example)
  add_example(spmm_csc)
else()
  add_subdirectory(device)
endif()

if (ENABLE_ROCSPARSE)
  add_subdirectory(rocsparse)
endif()
if (ENABLE_CUSPARSE)
  add_subdirectory(cusparse)
endif()
